fixup! base: Hide ADB and developer setting enable status [1/2]
Change-Id: I0a2d02c27cdb90d79a5d1f5035350ac94df3e49a